--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="popular_movies">Popular Movies</string>
+    <string name="cooming_soon">Cooming Soon</string>
     <string name="search_film">Search film</string>
     <string name="showing_result">Showing result of</string>
     <string name="sample_title">Maze Runner</string>
